--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ apply plugin: 'java'
 sourceCompatibility = 1.8
 
 repositories {
-    maven { url "http://172.28.1.170:8888/nexus/content/groups/public/" }
+    //maven { url "http://172.28.1.170:8888/nexus/content/groups/public/" }
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
 }
 
 dependencies {
